[2021-12-15]
- Complete rewrite started.

[2021-12-16]
- Added Cactus Apple to the loot table of Mottled Boar for the quest Galgar's Cactus Apple Surprise.
- Updated the flags of Cactus Apple to allow every member of a group to loot it.

- Added Sack of Supplies to the loot table of Dustwind Harpy and Dustwind Pillager for the quest Winds in the Desert.
- Updated the flags of Sack of Supplies to allow every member of a group to loot it.

[2021-12-17]
- Added Fungal Spores to the loot table of Oasis Snapjaw for the quest Fungal Spores.
- Updated the flags of Fungal Spores to allow every member of a group to loot it.

[2021-12-18]
- Updated the flags of Charred Razormane Wand to allow every member of a group to loot it.
- Updated the flags of Razormane Backstabber to allow every member of a group to loot it.
- Updated the flags of Razormane War Shield to allow every member of a group to loot it.

- Updated the respawn time of Alien Egg.

- Added Highperch Wyvern Egg to the loot table of Highperch Wyvern for the quest Wind Rider.
- Updated the flags of Highperch Wyvern Egg to allow every member of a group to loot it.

[2021-12-20]
- Added Venomhide Ravasaur Egg to the loot table of Venomhide Ravasaur for the quest Venomhide Eggs.
- Updated the flags of Venomhide Ravasaur Egg to allow every member of a group to loot it.

[2021-12-21]
- Added Deepmoss Egg to the loot table of Deepmoss Creeper for the quest Deepmoss Spider Eggs.
- Added Deepmoss Egg to the loot table of Deepmoss Webspinner for the quest Deepmoss Spider Eggs.
- Added Deepmoss Egg to the loot table of Deepmoss Venomspitter for the quest Deepmoss Spider Eggs.
- Updated the flags of Deepmoss Egg to allow every member of a group to loot it.

[2021-12-22]
- Added Gaea Seed to the loot table of Pridewing Wyvern for the quest Cycle of Rebirth.
- Added Gaea Seed to the loot table of Pridewing Skyhunter for the quest Cycle of Rebirth.